--- a/app/src/main/res/layout/activity_edit_service.xml
+++ b/app/src/main/res/layout/activity_edit_service.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_edit_service_ll_main"
-    style="@style/DefaultTheme"
+    style="@style/DefaultPage"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.editing.EditServiceActivity">
 
     <include layout="@layout/part_top_panel" />
