--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/DefaultTheme"
+    style="@style/DefaultPage"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.search_service.MainScreenActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
