--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/DefaultTheme"
+    style="@style/DefaultPage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.chat.MessagesActivity">
