--- a/app/src/main/res/layout/element_day.xml
+++ b/app/src/main/res/layout/element_day.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/dayBtn"
+        android:id="@+id/element_day_btn"
         android:textColor="@color/black"
+        android:padding="@dimen/schedule_button_padding"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="5dp"
+        app:cornerRadius="@dimen/schedule_button_corner_radius"
         android:backgroundTint="@color/white" />
 </LinearLayout>
