--- a/app/src/main/res/layout/element_message.xml
+++ b/app/src/main/res/layout/element_message.xml
@@ -19,7 +19,7 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/backgroundLightBlue"
+            app:cardBackgroundColor="@color/lightBlue"
             app:cardCornerRadius="@dimen/default_margin">
 
             <LinearLayout
