--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <color name="mainBlue">#0093B7</color>
     <color name="mainBlue40">#660093B7</color>
     <color name="darkBlue">#005F89</color>
     <color name="darkBlue40">#66005F89</color>
-    <color name="backgroundLightBlue">#D1E1E5</color>
+    <color name="lightBlue">#D1E1E5</color>
 
     <color name="white" tools:override="true">#FFFFFF</color>
     <color name="white80">#CCFFFFFF</color>
@@ -13,17 +14,9 @@
 
     <color name="red">#FF0000</color>
     <color name="yellow">#f6db40</color>
-    <color name="light_yellow">#FDF2B0</color>
 
     <color name="grey40">#66D1D1D1</color>
     <color name="grey">#888888</color>
     <color name="dark_grey">#666666</color>
-
-    <!-- Style for logIn pages -->
-    <color name="rightBorder">#005F89</color>
-    <color name="leftBorder">#007693</color>
-
-    <!-- transparent -->
-    <color name="transparent">#8C007693</color>
 
 </resources>
