--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <!-- Schedule activity -->
     <dimen name="schedule_time_button_height">42dp</dimen>
     <dimen name="schedule_button_margin">2dp</dimen>
+    <dimen name="schedule_button_padding">4dp</dimen>
     <dimen name="schedule_button_stroke_width">3dp</dimen>
     <dimen name="schedule_button_corner_radius">5dp</dimen>
     <dimen name="schedule_button_text_size">8sp</dimen>
