--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,12 +16,9 @@
     <dimen name="schedule_button_padding">4dp</dimen>
     <dimen name="schedule_button_stroke_width">3dp</dimen>
     <dimen name="schedule_button_corner_radius">5dp</dimen>
-    <dimen name="schedule_button_text_size">8sp</dimen>
-
-    <!-- Sessions activity -->
-    <dimen name="sessions_button_width">48dp</dimen>
-    <dimen name="sessions_button_height">48dp</dimen>
-    <dimen name="sessions_button_margin">8dp</dimen>
+    <dimen name="schedule_button_text_size">10sp</dimen>
+    <dimen name="session_time_button_margin">4dp</dimen>
+    <dimen name="session_time_button_height">48dp</dimen>
 
     <!-- Margin -->
     <dimen name="default_margin">8dp</dimen>
