--- a/app/src/main/res/layout/element_changeable_photo.xml
+++ b/app/src/main/res/layout/element_changeable_photo.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/default_small_margin"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/element_changeable_photo_tv_delete"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="X"
-        android:textSize="24sp" />
-
     <ImageView
         android:id="@+id/element_changeable_photo_iv_photo"
-        style="@style/photoElement" />
+        android:src="@drawable/icon_image"
+        android:layout_width="@dimen/photo_width"
+        android:layout_height="@dimen/photo_height"
+        style="@style/photoElement"
+        tools:ignore="ContentDescription" />
 
-</LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/element_changeable_photo_btn_delete"
+        style="@style/closeIcon"
+        android:layout_gravity="end"
+        android:layout_margin="@dimen/default_small_margin"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:iconTint="@color/darkBlue"
+        android:backgroundTint="@color/grey40"
+        app:icon="@drawable/icon_close" />
+</FrameLayout>
