--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="photo_width">150dp</dimen>
     <dimen name="photo_height">150dp</dimen>
+    <dimen name="photo_padding">20dp</dimen>
 
     <dimen name="photo_avatar_width">48dp</dimen>
     <dimen name="photo_avatar_height">48dp</dimen>
