--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -23,7 +23,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <LinearLayout
+            <FrameLayout
                 style="@style/wideHorizontalBlock"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -32,16 +32,17 @@
                 <ImageView
                     android:id="@+id/activity_edit_profile_iv_avatar"
                     style="@style/profileAvatar"
+                    tools:ignore="ContentDescription"
                     tools:srcCompat="@tools:sample/avatars" />
-            </LinearLayout>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/activity_edit_profile_btn_add_photo"
-                style="@style/mainButton"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/font_awesome_solid"
-                android:text=""
-                android:textSize="20sp" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/activity_edit_profile_btn_add_photo"
+                    android:layout_gravity="center"
+                    style="@style/iconButton"
+                    android:backgroundTint="@color/grey40"
+                    app:icon="@drawable/icon_edit"
+                    app:iconTint="@color/darkBlue" />
+            </FrameLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/MaterialInputLayout"
