--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,16 +168,27 @@
         <item name="cornerRadius">@dimen/button_corner_radius</item>
     </style>
 
-    <style name="closeIcon" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="baseIconButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
-        <item name="android:paddingLeft">6dp</item>
-        <item name="android:paddingRight">6dp</item>
         <item name="android:minWidth">48dp</item>
         <item name="android:minHeight">48dp</item>
         <item name="strokeWidth">0dp</item>
         <item name="cornerRadius">24dp</item>
+    </style>
+
+    <style name="closeIconButton" parent="baseIconButton">
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:paddingRight">6dp</item>
+    </style>
+
+    <style name="iconButton" parent="baseIconButton">
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="cornerRadius">32dp</item>
     </style>
 
     <style name="outlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
@@ -372,6 +383,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="chipBackgroundColor">@color/mainBlue</item>
         <item name="rippleColor">@color/darkBlue40</item>
+        <item name="android:layout_margin">@dimen/default_small_margin</item>
         <item name="android:layout_marginEnd">2dp</item>
     </style>
 
